# lemonade

./: CLAUDE.md  CMakeLists.txt
docs/: faq.md
docs/api/: anthropic.md  lemonade.md  openai.md
docs/dev/: README.md  building-apps.md  lemonade-omni.md
docs/guide/: cli.md
docs/server/: lemonade-server-cli.md  server_spec.md
src/app/src-tauri/: Cargo.toml
src/app/src-tauri/src/: beacon.rs  webview_shim.rs
src/cpp/: Multi-Model-Spec.md
src/cpp/include/lemon/: cli_parser.h  router.h  server.h
src/cpp/include/lemon/backends/: llamacpp_server.h
src/cpp/include/lemon_tray/: server_manager.h
src/cpp/server/: cli_parser.cpp  main.cpp  router.cpp  server.cpp  system_info.cpp
src/cpp/server/backends/: llamacpp_server.cpp
src/cpp/tray/: server_manager.cpp  tray_app.cpp
src/tray/: CMakeLists.txt  main.cpp  server_client.cpp  tray_app.cpp
src/tray/include/tray/: server_client.h  tray_app.h
src/tray/include/tray/platform/: linux_tray.h  macos_tray.h  tray_interface.h  windows_tray.h
src/tray/platform/: linux_tray.cpp  macos_tray.mm  tray_factory.cpp  windows_tray.cpp
